# terauvr

./: IMPROVEMENTS.md  README.md  pyproject.toml  requirements.txt  setup.py  test_improvements.py
terauvr/: __init__.py  __main__.py  cli.py
terauvr/app/: __init__.py
terauvr/configs/: __init__.py  config.json  config.py
terauvr/utils/: __init__.py  device_manager.py
