[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terauvr"
version = "1.0.0"
authors = [
    {name = "terastudio-org/terastudio", email = "contact@terastudio.org"}
]
description = "Advanced AI-powered VR/AR audio separation and processing toolkit"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["ai", "audio", "separation", "vr", "ar", "music", "machine-learning", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.12.0",
    "torchaudio>=0.12.0", 
    "numpy>=1.21.0",
    "gradio>=3.30.0",
    "librosa>=0.9.0",
    "scipy>=1.7.0",
    "onnxruntime>=1.12.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.0",
    "resampy>=0.4.0",
    "Pillow>=8.0.0",
    "click>=8.0.0",
    "psutil>=5.8.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0", 
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0",
    "myst-parser>=0.15.0",
]
all = [
    "torch-directml>=1.0.0",
    "pytorch-ocl>=1.0.0", 
    "onnxruntime-gpu>=1.12.0",
    "pywin32>=227; platform_system=='Windows'",
]

[project.urls]
Homepage = "https://github.com/terastudio-org/terauvr"
"Bug Tracker" = "https://github.com/terastudio-org/terauvr/issues"
Documentation = "https://terastudio-docs.readthedocs.io/"
Source = "https://github.com/terastudio-org/terauvr"

[project.scripts]
terauvr = "terauvr.cli:main"

[tool.setuptools]
packages = ["terauvr"]

[tool.setuptools.package-dir]
"" = "terauvr"

[tool.setuptools.package-data]
"*" = ["*.json", "*.bin", "*.txt", "*.md", "*.yaml", "*.yml", "*.py", "*.dll", "*.exe"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["terauvr"]
omit = ["tests/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]